--- a/style.css
+++ b/style.css
@@ -4,20 +4,54 @@ body {
   margin: 0;
 }
 
-/* set map, body, and html to 100% of the screen size */
-#map,
+/* set body and html to 100% of the screen size */
 body,
 html {
   height: 100%;
 }
+
+.info {
+  padding: 6px 8px;
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255,255,255,0.8);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+}
+.info h4 {
+  margin: 0 0 5px;
+  color: #777;
+}
 .legend {
-    line-height: 18px;
-    color: #555;
+  line-height: 18px;
+  color: #555;
 }
 .legend i {
-    width: 18px;
-    height: 18px;
-    float: left;
-    margin-right: 8px;
-    opacity: 0.7;
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
 }
+/* Set map to 100% of height/width of screen, and position absolute */
+#map {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+/* Styles to control layer groups */
+.leaflet-control-layers-group-name {
+  font-weight: bold;
+  margin-bottom: .2em;
+  display: block;
+}
+
+.leaflet-control-layers-group {
+  margin-bottom: .5em;
+}
+
+.leaflet-control-layers-group label {
+  padding-left: .5em;
+}
+/* End Styles to control layer groups */
